<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cfapps.io.hynish.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_gravity="top|center"
            android:layout_weight="0.45"
            app:srcCompat="@mipmap/hynish"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center"
            android:layout_marginTop="18dp"
            android:scaleType="centerInside"
            android:textAlignment="center"
            android:text="@string/title_home_fragment"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="top|center"
            android:scaleType="centerInside"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/message_home_fragment"
            android:layout_below="@+id/textViewTitle"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/testViewFeed"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="top|center"
            android:scaleType="centerInside"
            android:textAlignment="center"
            android:text="@string/feedback_home_fragment"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewMessage"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/textViewTitle1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="top|center"
            android:scaleType="centerInside"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewMessage"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>


</ScrollView>
